--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [ 16.x, 18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -29,3 +29,55 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+
+        ## Presa dal marketplace
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./build
+
+
+
+
+
+
+
+
+
+
+# # Nome della action
+# name: Deploy React App to GH pages
+
+# # "evento" che triggera la action
+# on:
+#   push:
+#     branches: [main]
+
+# # setup della action
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     strategy:
+#       matrix:
+#         # versione di node.js da utilizzare
+#         node-version: [16]
+
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: Use Node.js ${{ matrix.node-version }}
+#         uses: actions/setup-node@v1
+#         with:
+#           node-version: ${{ matrix.node-version }}
+
+#       ## codice custom
+#       - run: npm ci
+#       - run: npm run build
+
+#       ## Presa dal marketplace
+#       - name: Deploy
+#         uses: peaceiris/actions-gh-pages@v3
+#         with:
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
+#           publish_dir: ./build
